--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,15 @@ body {
 
 }
 
+.heading{
+  position: fixed;
+  background-color: white;
+    width: 100%;
+}
+
 .background{
   background-image: url('Images/Ghibli.jpg');
+  height: fill;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
@@ -17,6 +24,7 @@ body {
 
 .film-details {
   width: 18rem;
+  margin-top: 12%;
   margin-bottom: 5px;
   display: flex;
   background: rgba(255,255,255,0.8);
